parser.output
Terminals unused in grammar

   CHAR
   LBRACE
   RBRACE
   REF


Grammar

    0 $accept: program "end of file"

    1 program: declList

    2 declList: declList decl
    3         | %empty

    4 decl: varDecl
    5     | fnDecl

    6 varDeclList: varDeclList varDecl
    7            | %empty

    8 varDecl: type id SEMICOLON

    9 fnDecl: type id formals fnBody

   10 formals: LPAREN RPAREN
   11        | LPAREN formalsList RPAREN

   12 formalsList: formalDecl
   13            | formalDecl COMMA formalsList

   14 fnBody: LCURLY varDeclList stmtList RCURLY

   15 formalDecl: type id

   16 stmtList: %empty
   17         | stmtList stmt

   18 stmt: assignExp SEMICOLON
   19     | loc CROSSCROSS SEMICOLON
   20     | loc DASHDASH SEMICOLON
   21     | READ loc SEMICOLON
   22     | WRITE exp SEMICOLON
   23     | IF LPAREN exp RPAREN LCURLY varDeclList stmtList RCURLY
   24     | IF LPAREN exp RPAREN LCURLY varDeclList stmtList RCURLY ELSE LCURLY varDeclList stmtList RCURLY
   25     | WHILE LPAREN exp RPAREN LCURLY varDeclList stmtList RCURLY
   26     | RETURN exp SEMICOLON
   27     | RETURN SEMICOLON
   28     | fncall SEMICOLON

   29 assignExp: loc ASSIGN exp

   30 exp: assignExp
   31    | exp CROSS exp
   32    | exp DASH exp
   33    | exp STAR exp
   34    | exp SLASH exp
   35    | NOT exp
   36    | exp AND exp
   37    | exp OR exp
   38    | exp EQUALS exp
   39    | exp NOTEQUALS exp
   40    | exp LESS exp
   41    | exp GREATER exp
   42    | exp LESSEQ exp
   43    | exp GREATEREQ exp
   44    | DASH term
   45    | term

   46 term: loc
   47     | INTLITERAL
   48     | STRINGLITERAL
   49     | TRUE
   50     | FALSE
   51     | LPAREN exp RPAREN
   52     | fncall

   53 fncall: id LPAREN RPAREN
   54       | id LPAREN actualList RPAREN

   55 actualList: exp
   56           | actualList COMMA exp

   57 type: primtype ptrdepth

   58 primtype: INT
   59         | BOOL
   60         | VOID

   61 ptrdepth: DEREF ptrdepth
   62         | %empty

   63 loc: id
   64    | DEREF loc

   65 id: ID


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
CHAR (258)
BOOL (259) 59
INT (260) 58
VOID (261) 60
TRUE (262) 49
FALSE (263) 50
IF (264) 23 24
ELSE (265) 24
WHILE (266) 25
RETURN (267) 26 27
ID (268) 65
INTLITERAL (269) 47
STRINGLITERAL (270) 48
LCURLY (271) 14 23 24 25
RCURLY (272) 14 23 24 25
LPAREN (273) 10 11 23 24 25 51 53 54
RPAREN (274) 10 11 23 24 25 51 53 54
LBRACE (275)
RBRACE (276)
SEMICOLON (277) 8 18 19 20 21 22 26 27 28
COMMA (278) 13 56
WRITE (279) 22
READ (280) 21
CROSSCROSS (281) 19
DASHDASH (282) 20
CROSS (283) 31
DASH (284) 32 44
STAR (285) 33
DEREF (286) 61 64
REF (287)
SLASH (288) 34
NOT (289) 35
AND (290) 36
OR (291) 37
EQUALS (292) 38
NOTEQUALS (293) 39
LESS (294) 40
GREATER (295) 41
LESSEQ (296) 42
GREATEREQ (297) 43
ASSIGN (298) 29


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
declList (46)
    on left: 2 3, on right: 1 2
decl (47)
    on left: 4 5, on right: 2
varDeclList (48)
    on left: 6 7, on right: 6 14 23 24 25
varDecl (49)
    on left: 8, on right: 4 6
fnDecl (50)
    on left: 9, on right: 5
formals (51)
    on left: 10 11, on right: 9
formalsList (52)
    on left: 12 13, on right: 11 13
fnBody (53)
    on left: 14, on right: 9
formalDecl (54)
    on left: 15, on right: 12 13
stmtList (55)
    on left: 16 17, on right: 14 17 23 24 25
stmt (56)
    on left: 18 19 20 21 22 23 24 25 26 27 28, on right: 17
assignExp (57)
    on left: 29, on right: 18 30
exp (58)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45, on right:
    22 23 24 25 26 29 31 32 33 34 35 36 37 38 39 40 41 42 43 51 55
    56
term (59)
    on left: 46 47 48 49 50 51 52, on right: 44 45
fncall (60)
    on left: 53 54, on right: 28 52
actualList (61)
    on left: 55 56, on right: 54 56
type (62)
    on left: 57, on right: 8 9 15
primtype (63)
    on left: 58 59 60, on right: 57
ptrdepth (64)
    on left: 61 62, on right: 57 61
loc (65)
    on left: 63 64, on right: 19 20 21 29 46 64
id (66)
    on left: 65, on right: 8 9 15 53 54 63


State 0

    0 $accept: . program "end of file"

    $default  reduce using rule 3 (declList)

    program   go to state 1
    declList  go to state 2


State 1

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 program: declList .
    2 declList: declList . decl

    BOOL  shift, and go to state 4
    INT   shift, and go to state 5
    VOID  shift, and go to state 6

    $default  reduce using rule 1 (program)

    decl      go to state 7
    varDecl   go to state 8
    fnDecl    go to state 9
    type      go to state 10
    primtype  go to state 11


State 3

    0 $accept: program "end of file" .

    $default  accept


State 4

   59 primtype: BOOL .

    $default  reduce using rule 59 (primtype)


State 5

   58 primtype: INT .

    $default  reduce using rule 58 (primtype)


State 6

   60 primtype: VOID .

    $default  reduce using rule 60 (primtype)


State 7

    2 declList: declList decl .

    $default  reduce using rule 2 (declList)


State 8

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


State 9

    5 decl: fnDecl .

    $default  reduce using rule 5 (decl)


State 10

    8 varDecl: type . id SEMICOLON
    9 fnDecl: type . id formals fnBody

    ID  shift, and go to state 12

    id  go to state 13


State 11

   57 type: primtype . ptrdepth

    DEREF  shift, and go to state 14

    $default  reduce using rule 62 (ptrdepth)

    ptrdepth  go to state 15


State 12

   65 id: ID .

    $default  reduce using rule 65 (id)


State 13

    8 varDecl: type id . SEMICOLON
    9 fnDecl: type id . formals fnBody

    LPAREN     shift, and go to state 16
    SEMICOLON  shift, and go to state 17

    formals  go to state 18


State 14

   61 ptrdepth: DEREF . ptrdepth

    DEREF  shift, and go to state 14

    $default  reduce using rule 62 (ptrdepth)

    ptrdepth  go to state 19


State 15

   57 type: primtype ptrdepth .

    $default  reduce using rule 57 (type)


State 16

   10 formals: LPAREN . RPAREN
   11        | LPAREN . formalsList RPAREN

    BOOL    shift, and go to state 4
    INT     shift, and go to state 5
    VOID    shift, and go to state 6
    RPAREN  shift, and go to state 20

    formalsList  go to state 21
    formalDecl   go to state 22
    type         go to state 23
    primtype     go to state 11


State 17

    8 varDecl: type id SEMICOLON .

    $default  reduce using rule 8 (varDecl)


State 18

    9 fnDecl: type id formals . fnBody

    LCURLY  shift, and go to state 24

    fnBody  go to state 25


State 19

   61 ptrdepth: DEREF ptrdepth .

    $default  reduce using rule 61 (ptrdepth)


State 20

   10 formals: LPAREN RPAREN .

    $default  reduce using rule 10 (formals)


State 21

   11 formals: LPAREN formalsList . RPAREN

    RPAREN  shift, and go to state 26


State 22

   12 formalsList: formalDecl .
   13            | formalDecl . COMMA formalsList

    COMMA  shift, and go to state 27

    $default  reduce using rule 12 (formalsList)


State 23

   15 formalDecl: type . id

    ID  shift, and go to state 12

    id  go to state 28


State 24

   14 fnBody: LCURLY . varDeclList stmtList RCURLY

    $default  reduce using rule 7 (varDeclList)

    varDeclList  go to state 29


State 25

    9 fnDecl: type id formals fnBody .

    $default  reduce using rule 9 (fnDecl)


State 26

   11 formals: LPAREN formalsList RPAREN .

    $default  reduce using rule 11 (formals)


State 27

   13 formalsList: formalDecl COMMA . formalsList

    BOOL  shift, and go to state 4
    INT   shift, and go to state 5
    VOID  shift, and go to state 6

    formalsList  go to state 30
    formalDecl   go to state 22
    type         go to state 23
    primtype     go to state 11


State 28

   15 formalDecl: type id .

    $default  reduce using rule 15 (formalDecl)


State 29

    6 varDeclList: varDeclList . varDecl
   14 fnBody: LCURLY varDeclList . stmtList RCURLY

    BOOL  shift, and go to state 4
    INT   shift, and go to state 5
    VOID  shift, and go to state 6

    $default  reduce using rule 16 (stmtList)

    varDecl   go to state 31
    stmtList  go to state 32
    type      go to state 33
    primtype  go to state 11


State 30

   13 formalsList: formalDecl COMMA formalsList .

    $default  reduce using rule 13 (formalsList)


State 31

    6 varDeclList: varDeclList varDecl .

    $default  reduce using rule 6 (varDeclList)


State 32

   14 fnBody: LCURLY varDeclList stmtList . RCURLY
   17 stmtList: stmtList . stmt

    IF      shift, and go to state 34
    WHILE   shift, and go to state 35
    RETURN  shift, and go to state 36
    ID      shift, and go to state 12
    RCURLY  shift, and go to state 37
    WRITE   shift, and go to state 38
    READ    shift, and go to state 39
    DEREF   shift, and go to state 40

    stmt       go to state 41
    assignExp  go to state 42
    fncall     go to state 43
    loc        go to state 44
    id         go to state 45


State 33

    8 varDecl: type . id SEMICOLON

    ID  shift, and go to state 12

    id  go to state 46


State 34

   23 stmt: IF . LPAREN exp RPAREN LCURLY varDeclList stmtList RCURLY
   24     | IF . LPAREN exp RPAREN LCURLY varDeclList stmtList RCURLY ELSE LCURLY varDeclList stmtList RCURLY

    LPAREN  shift, and go to state 47


State 35

   25 stmt: WHILE . LPAREN exp RPAREN LCURLY varDeclList stmtList RCURLY

    LPAREN  shift, and go to state 48


State 36

   26 stmt: RETURN . exp SEMICOLON
   27     | RETURN . SEMICOLON

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    SEMICOLON      shift, and go to state 54
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp  go to state 57
    exp        go to state 58
    term       go to state 59
    fncall     go to state 60
    loc        go to state 61
    id         go to state 45


State 37

   14 fnBody: LCURLY varDeclList stmtList RCURLY .

    $default  reduce using rule 14 (fnBody)


State 38

   22 stmt: WRITE . exp SEMICOLON

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp  go to state 57
    exp        go to state 62
    term       go to state 59
    fncall     go to state 60
    loc        go to state 61
    id         go to state 45


State 39

   21 stmt: READ . loc SEMICOLON

    ID     shift, and go to state 12
    DEREF  shift, and go to state 40

    loc  go to state 63
    id   go to state 64


State 40

   64 loc: DEREF . loc

    ID     shift, and go to state 12
    DEREF  shift, and go to state 40

    loc  go to state 65
    id   go to state 64


State 41

   17 stmtList: stmtList stmt .

    $default  reduce using rule 17 (stmtList)


State 42

   18 stmt: assignExp . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 43

   28 stmt: fncall . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 44

   19 stmt: loc . CROSSCROSS SEMICOLON
   20     | loc . DASHDASH SEMICOLON
   29 assignExp: loc . ASSIGN exp

    CROSSCROSS  shift, and go to state 68
    DASHDASH    shift, and go to state 69
    ASSIGN      shift, and go to state 70


State 45

   53 fncall: id . LPAREN RPAREN
   54       | id . LPAREN actualList RPAREN
   63 loc: id .

    LPAREN  shift, and go to state 71

    $default  reduce using rule 63 (loc)


State 46

    8 varDecl: type id . SEMICOLON

    SEMICOLON  shift, and go to state 17


State 47

   23 stmt: IF LPAREN . exp RPAREN LCURLY varDeclList stmtList RCURLY
   24     | IF LPAREN . exp RPAREN LCURLY varDeclList stmtList RCURLY ELSE LCURLY varDeclList stmtList RCURLY

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp  go to state 57
    exp        go to state 72
    term       go to state 59
    fncall     go to state 60
    loc        go to state 61
    id         go to state 45


State 48

   25 stmt: WHILE LPAREN . exp RPAREN LCURLY varDeclList stmtList RCURLY

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp  go to state 57
    exp        go to state 73
    term       go to state 59
    fncall     go to state 60
    loc        go to state 61
    id         go to state 45


State 49

   49 term: TRUE .

    $default  reduce using rule 49 (term)


State 50

   50 term: FALSE .

    $default  reduce using rule 50 (term)


State 51

   47 term: INTLITERAL .

    $default  reduce using rule 47 (term)


State 52

   48 term: STRINGLITERAL .

    $default  reduce using rule 48 (term)


State 53

   51 term: LPAREN . exp RPAREN

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp  go to state 57
    exp        go to state 74
    term       go to state 59
    fncall     go to state 60
    loc        go to state 61
    id         go to state 45


State 54

   27 stmt: RETURN SEMICOLON .

    $default  reduce using rule 27 (stmt)


State 55

   44 exp: DASH . term

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    DEREF          shift, and go to state 40

    term    go to state 75
    fncall  go to state 60
    loc     go to state 76
    id      go to state 45


State 56

   35 exp: NOT . exp

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp  go to state 57
    exp        go to state 77
    term       go to state 59
    fncall     go to state 60
    loc        go to state 61
    id         go to state 45


State 57

   30 exp: assignExp .

    $default  reduce using rule 30 (exp)


State 58

   26 stmt: RETURN exp . SEMICOLON
   31 exp: exp . CROSS exp
   32    | exp . DASH exp
   33    | exp . STAR exp
   34    | exp . SLASH exp
   36    | exp . AND exp
   37    | exp . OR exp
   38    | exp . EQUALS exp
   39    | exp . NOTEQUALS exp
   40    | exp . LESS exp
   41    | exp . GREATER exp
   42    | exp . LESSEQ exp
   43    | exp . GREATEREQ exp

    SEMICOLON  shift, and go to state 78
    CROSS      shift, and go to state 79
    DASH       shift, and go to state 80
    STAR       shift, and go to state 81
    SLASH      shift, and go to state 82
    AND        shift, and go to state 83
    OR         shift, and go to state 84
    EQUALS     shift, and go to state 85
    NOTEQUALS  shift, and go to state 86
    LESS       shift, and go to state 87
    GREATER    shift, and go to state 88
    LESSEQ     shift, and go to state 89
    GREATEREQ  shift, and go to state 90


State 59

   45 exp: term .

    $default  reduce using rule 45 (exp)


State 60

   52 term: fncall .

    $default  reduce using rule 52 (term)


State 61

   29 assignExp: loc . ASSIGN exp
   46 term: loc .

    ASSIGN  shift, and go to state 70

    $default  reduce using rule 46 (term)


State 62

   22 stmt: WRITE exp . SEMICOLON
   31 exp: exp . CROSS exp
   32    | exp . DASH exp
   33    | exp . STAR exp
   34    | exp . SLASH exp
   36    | exp . AND exp
   37    | exp . OR exp
   38    | exp . EQUALS exp
   39    | exp . NOTEQUALS exp
   40    | exp . LESS exp
   41    | exp . GREATER exp
   42    | exp . LESSEQ exp
   43    | exp . GREATEREQ exp

    SEMICOLON  shift, and go to state 91
    CROSS      shift, and go to state 79
    DASH       shift, and go to state 80
    STAR       shift, and go to state 81
    SLASH      shift, and go to state 82
    AND        shift, and go to state 83
    OR         shift, and go to state 84
    EQUALS     shift, and go to state 85
    NOTEQUALS  shift, and go to state 86
    LESS       shift, and go to state 87
    GREATER    shift, and go to state 88
    LESSEQ     shift, and go to state 89
    GREATEREQ  shift, and go to state 90


State 63

   21 stmt: READ loc . SEMICOLON

    SEMICOLON  shift, and go to state 92


State 64

   63 loc: id .

    $default  reduce using rule 63 (loc)


State 65

   64 loc: DEREF loc .

    $default  reduce using rule 64 (loc)


State 66

   18 stmt: assignExp SEMICOLON .

    $default  reduce using rule 18 (stmt)


State 67

   28 stmt: fncall SEMICOLON .

    $default  reduce using rule 28 (stmt)


State 68

   19 stmt: loc CROSSCROSS . SEMICOLON

    SEMICOLON  shift, and go to state 93


State 69

   20 stmt: loc DASHDASH . SEMICOLON

    SEMICOLON  shift, and go to state 94


State 70

   29 assignExp: loc ASSIGN . exp

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp  go to state 57
    exp        go to state 95
    term       go to state 59
    fncall     go to state 60
    loc        go to state 61
    id         go to state 45


State 71

   53 fncall: id LPAREN . RPAREN
   54       | id LPAREN . actualList RPAREN

    TRUE           shift, and go to state 49
    FALSE          shift, and go to state 50
    ID             shift, and go to state 12
    INTLITERAL     shift, and go to state 51
    STRINGLITERAL  shift, and go to state 52
    LPAREN         shift, and go to state 53
    RPAREN         shift, and go to state 96
    DASH           shift, and go to state 55
    DEREF          shift, and go to state 40
    NOT            shift, and go to state 56

    assignExp   go to state 57
    exp         go to state 97
    term        go to state 59
    fncall      go to state 60
    actualList  go to state 98
    loc         go to state 61
    id          go to state 45


State 72

   23 stmt: IF LPAREN exp . RPAREN LCURLY varDeclList stmtList RCURLY
   24     | IF LPAREN exp . RPAREN LCURLY varDeclList stmtList RCURLY ELSE LCURLY varDeclList stmtList RCURLY
   31 exp: exp . CROSS exp
   32    | exp . DASH exp
   33    | exp . STAR exp
   34    | exp . SLASH exp
   36    | exp . AND exp
   37    | exp . OR exp
   38    | exp . EQUALS exp
   39    | exp . NOTEQUALS exp
   40    | exp . LESS exp
   41    | exp . GREATER exp
   42    | exp . LESSEQ exp
   43    | exp . GREATEREQ exp

    RPAREN     shift, and go to state 99
    CROSS      shift, and go to state 79
    DASH       shift, and go to state 80
    STAR       shift, and go to state 81
    SLASH      shift, and go to state 82
    AND        shift, and go to state 83
    OR         shift, and go to state 84
    EQUALS     shift, and go to state 85
    NOTEQUALS  shift, and go to state 86
    LESS       shift, and go to state 87
    GREATER    shift, and go to state 88
    LESSEQ     shift, and go to state 89
    GREATEREQ  shift, and go to state 90


State 73

   25 stmt: WHILE LPAREN exp . RPAREN LCURLY varDeclList stmtList RCURLY
   31 exp: exp . CROSS exp
   32    | exp . DASH exp
   33    | exp . STAR exp
   34    | exp . SLASH exp
   36    | exp . AND exp
   37    | exp . OR exp
   38    | exp . EQUALS exp
   39    | exp . NOTEQUALS exp
   40    | exp . LESS exp
   41    | exp . GREATER exp
   42    | exp . LESSEQ exp
   43    | exp . GREATEREQ exp

    RPAREN     shift, and go to state 100
    CROSS      shift, and go to state 79
    DASH       shift, and go to state 80
    STAR       shift, and go to state 81
    SLASH      shift, and go to state 82
    AND        shift, and go to state 83
    OR         shift, and go to state 84
    EQUALS     shift, and go to state 85
    NOTEQUALS  shift, and go to state 86
    LESS       shift, and go to state 87
    GREATER    shift, and go to state 88
    LESSEQ     shift, and go to state 89
    GREATEREQ  shift, and go to state 90


State 74

   31 exp: exp . CROSS exp
   32    | exp . DASH exp
   33    | exp . STAR exp
   34    | exp . SLASH exp
   36    | exp . AND exp
   37    | exp . OR exp
   38    | exp . EQUALS exp
   39    | exp . NOTEQUALS exp
   40    | exp . LESS exp
   41    | exp . GREATER exp
   42    | exp . LESSEQ exp
   43    | exp . GREATEREQ exp
   51 term: LPAREN exp . RPAREN

    RPAREN     shift, and go to state 101
    CROSS      shift, and go to state 79
    DASH       shift, and go to state 80
    STAR       shift, and go to state 81
    SLASH      shift, and go to state 82
    AND        shift, and go to state 83
    OR         shift, and go to state 84
    EQUALS     shift, and go to state 85
    NOTEQUALS  shift, and go to state 86
    LESS       shift, and go to state 87
    GREATER    shift, and go to state 88
    LESSEQ     shift, and go to state 89
    GREATEREQ  shift, and go to state 90


State 75

   44 exp: DASH term .

    $default  reduce using rule 44 (exp)


State 76

   46 term: loc .

    $default  reduce using rule 46 (term)


State 77
